Portfolio fini faut attaquer le contact demain

--- a/index.html
+++ b/index.html
@@ -1,10 +1,69 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link "text/css" rel="stylesheet" href="css/index.css">
     <meta charset="utf-8">
     <title></title>
   </head>
+
   <body>
 
-  </body>
+<!-- Bordure haut de page  -->
+
+  <header>
+
+    <h1 id="prenom">Morgan Marcq</h1>
+
+      <h3 id="emploi"> Apprenant à Simplon boulogne-sur-mer </h3>
+
+<!-- Deuxieme Bordures haut de page ++ LIENS  -->
+
+<nav>
+  <strong>
+  </style>
+      <a id="portefolio" href="portfolio.html"> Portefolio </a>
+      <a id="apropos" href="index.html"> Á propos </a>
+      <a id="contact"  href=""> Contact </a>
+  </strong>
+</nav>
+
+  </header>
+
+    <!-- Avatar  -->
+
+    <section>
+
+
+
+    <div id="avatar">
+      <center>
+      <a> <img src="images/joker.jpg" alt="joker" /> </a>
+    </center>
+    </div>
+
+    <!-- Titre du texte  -->
+
+    <h2 id="bodytitre"> Á propos</h2>
+
+    <!-- description  -->
+
+    <a id="descritpion">
+
+
+      <p>Bonjour à tous </p> <p> Je suis comme c'est écrit ci-dessus Morgan Marcq, apprenant à <a id="simplon" href="http://boulogne.simplon.co/">Simplon</a>  et je suis ravis de vous présenter mon tout premier portfolio !    Actuellement en formation, mon but serait de créer des pages internet pour des partculiers ou bien des professionnels, et j'ai hâte d'apprendre le "php" ainsi que le "Java script" qui me permettront de me perfectionner dans cet art.  </p>
+
+
+
+    </a>
+
+    <!-- Fin de page avec lien logo  -->
+
+    <div>
+
+      <a id="facebook"> <img src="" href="" alt="" > </a>
+      <a id="skype"> <img src="" href="" alt="" > </a>
+
+      </section>
+
+    </body>
 </html>
