Voici mon portfolio sur le theme des jeux video enfin fini

--- a/index.html
+++ b/index.html
@@ -3,31 +3,36 @@
   <head>
     <link "text/css" rel="stylesheet" href="css/index.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>PORTFOLIO</title>
   </head>
 
   <body>
 
 <!-- Bordure haut de page  -->
+  <body>
 
   <header>
 
-    <h1 id="prenom">Morgan Marcq</h1>
+    <h1>Morgan Marcq</h1>
 
-      <h3 id="emploi"> Apprenant à Simplon boulogne-sur-mer </h3>
+      <h3> Apprenant à Simplon boulogne-sur-mer </h3>
 
-<!-- Deuxieme Bordures haut de page ++ LIENS  -->
+  </header>
+
+
 
 <nav>
   <strong>
   </style>
+    <div class="emploi">
       <a id="portefolio" href="portfolio.html"> Portefolio </a>
       <a id="apropos" href="index.html"> Á propos </a>
-      <a id="contact"  href=""> Contact </a>
+      <a id="contact"  href="contact.html"> Contact </a>
+    </div>
   </strong>
 </nav>
 
-  </header>
+
 
     <!-- Avatar  -->
 
@@ -51,8 +56,6 @@
 
 
       <p>Bonjour à tous </p> <p> Je suis comme c'est écrit ci-dessus Morgan Marcq, apprenant à <a id="simplon" href="http://boulogne.simplon.co/">Simplon</a>  et je suis ravis de vous présenter mon tout premier portfolio !    Actuellement en formation, mon but serait de créer des pages internet pour des partculiers ou bien des professionnels, et j'ai hâte d'apprendre le "php" ainsi que le "Java script" qui me permettront de me perfectionner dans cet art.  </p>
-
-
 
     </a>
 
