--- a/portfolio.html
+++ b/portfolio.html
@@ -3,42 +3,39 @@
   <head>
     <link "text/css" rel="stylesheet" href="css/index.css">
     <meta charset="utf-8">
-    <title></title>
+    <title>PORTFOLIO</title>
   </head>
 
-
+  <body>
 
 <!-- Bordure haut de page  -->
-<body>
+
   <header>
 
-    <h1 id="prenom">Morgan Marcq</h1>
-    <h3 id="emploi"> Apprenant à Simplon boulogne-sur-mer </h3>
+    <h1>Morgan Marcq</h1>
 
-<!-- Deuxieme Bordures haut de page ++ LIENS  -->
+      <h3> Apprenant à Simplon boulogne-sur-mer </h3>
+
   </header>
+<!-- Deuxieme Bordures haut de page ++ LIENS  -->
 
 <nav>
   <strong>
+  </style>
+    <div class="emploi">
       <a id="portefolio" href="portfolio.html"> Portefolio </a>
       <a id="apropos" href="index.html"> Á propos </a>
-      <a id="contact"  href=""> Contact </a>
+      <a id="contact"  href="contact.html"> Contact </a>
+    </div>
   </strong>
 </nav>
 
 
+  <!-- ooooooooooooooooo   oooooooooo PORTFOLIO ooooooooooooo--------------------------->
 
   <section>
 
 <!-- Présentations des images ainsi que le titre  -->
-
-
-  <h2 id="titrefolio"> Liste de mes jeux :D</h2>
-
-    <p id="paragraphefolio">
-      Je vais vous présenter une liste de jeux sur lesquels j'ai passé de nombreuses, nombreuses, nombreuses heures. Les textes suivant les images sont un descriptif personnel qui peut vous informez du temps que j'ai passé dessus, du niveau que j'avais et aussi quel type de jeu. Régalez vous !
-    </p>
-
 
     <!-- images du portfolio  -->
 
@@ -47,7 +44,7 @@
 
       <figure id="figurecsgo" class="imagefolio">
         <img src="images/csgo.jpg" alt="" />
-          <figcaption>Counter strike jeu FPS sur PC, j'ai 3 ans sur CSS, maintenant j'ai acheté CS:GO j'y ai déjà passé 2500 heures dessus, mon niveau dépend de la souris que j'ai et aussi du casque. Rang nova d'or 4*.</figcaption>
+          <figcaption>Counter Strike : Global Offensive</figcaption>
       </figure>
 
 <!-- images de moh  -->
@@ -56,7 +53,7 @@
 
       <figure id="figuremoh" class="imagefolio">
         <img src="images/moh.jpg" alt="" />
-          <figcaption> Metroid prime hunters jeu FPS sur DS, j'ai adoré pour son mode "on-line", j'étais très bon mais les joueurs ont très vite déserté.  </figcaption>
+          <figcaption> Métroïd Prime Hunters  </figcaption>
       </figure>
 
   <!-- images du LoL  -->
@@ -65,7 +62,7 @@
 
       <figure id="figurelol" class="imagefolio">
         <img  src="images/lol.jpg" alt="" />
-          <figcaption> League of legends jeu DOTA sur PC, j'y joue depuis 4 ans et j'ai un niveau Argent avec des reflets Platine. </figcaption>
+          <figcaption> League Of Legends</figcaption>
       </figure>
 
 
@@ -74,7 +71,7 @@
 
       <figure id="figurehs" class="imagefolio">
         <img src="images/hs.png" alt="" />
-          <figcaption> Hearthstone jeu de carte sur PC et Phone de Blizzard sur le monde de World of Warcraft. C'est un pay ton win, du coup... j'ai payé. Mon niveau est en classé rang 10 et clefs d'arêne n°7. </figcaption>
+          <figcaption> Hearthstone </figcaption>
       </figure>
 
 </section>
