j'ai fini git add *!

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <header>
 
-      <h1>Morgan Marcq</h1>
+        <h1> <a href="index.html"> Morgan Marcq </h1></a>
 
         <h3> Apprenant à Simplon boulogne-sur-mer </h3>
 
