--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
 
-    <h1>Morgan Marcq</h1>
+    <h1> <a href="index.html"> Morgan Marcq</h1> </a>
 
       <h3> Apprenant à Simplon boulogne-sur-mer </h3>
 
